--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "ConnStr": "Data Source=.;Initial Catalog=BlogDB;Integrated Security=true" }
+  "ConnectionStrings": { "ConnStr": "Data Source=ALMALI\\OMERFDEV;Initial Catalog=BlogDB;User ID=sa;pwd=Omer34;" }
 }
